--- a/cs-law-spa-pwa/locales/en.json
+++ b/cs-law-spa-pwa/locales/en.json
@@ -5,5 +5,78 @@
     "lawServices": "Law Services",
     "aboutUs": "About Us",
     "contact": "Contact"
+  },
+  "hero": {
+    "logoAlt": "The Law Firm of CONRAD SZEWCZYK & ASSOCIATES",
+    "button": "Schedule a Consultation",
+    "srText": "with The Law Firm of CONRAD SZEWCZYK & ASSOCIATES"
+  },
+  "lawServices": {
+    "title": "Law Services",
+    "familyLaw": "Family Law",
+    "criminalDefense": "Criminal Defense",
+    "businessLaw": "Business Law",
+    "estatePlanning": "Estate Planning",
+    "personalInjury": "Personal Injury",
+    "familyLawDescription": "Navigating the complexities of family law requires compassionate support and expert guidance. At Conrad Szewczyk & Associates, we understand the emotional and legal challenges that families face during these times. Our dedicated team is committed to providing comprehensive family law services tailored to your unique needs.",
+    "criminalDefenseDescription": "When facing criminal charges, your freedom and future are on the line. At Conrad Szewczyk & Associates, we understand the gravity of the situation and are committed to providing aggressive and effective legal representation to protect your rights.",
+    "businessLawDescription": "Operating a business in today's complex legal landscape requires proactive legal guidance and strategic planning. At Conrad Szewczyk & Associates, we offer comprehensive business law services to help entrepreneurs, startups, and established companies navigate legal challenges and achieve their goals.",
+    "estatePlanningDescription": "Planning for the future is one of the most important things you can do to protect your loved ones and your assets. At Conrad Szewczyk & Associates, we offer comprehensive estate planning services to help you create a plan that reflects your wishes and provides peace of mind for you and your family.",
+    "personalInjuryDescription": "Being injured due to someone else's negligence can have devastating consequences for you and your family. At Conrad Szewczyk & Associates, we're dedicated to helping personal injury victims seek justice and recover the compensation they deserve for their injuries and losses."
+  },
+  "familyLaw": {
+    "title": "Family Law",
+    "intro": "Navigating the complexities of family law requires compassionate support and expert guidance. At Conrad Szewczyk & Associates, we understand the emotional and legal challenges that families face during these times. Our dedicated team is committed to providing comprehensive family law services tailored to your unique needs.",
+    "approach": {
+      "title": "Our Approach",
+      "description": "With sensitivity and professionalism, we approach each case with the utmost care and attention to detail. Whether you're facing a divorce, child custody dispute, adoption, or any other family-related legal matter, we strive to achieve the best possible outcome for you and your loved ones."
+    },
+    "services": {
+      "title": "Our Services",
+      "divorce": "Divorce and Separation: Ending a marriage is never easy. Our experienced attorneys are here to guide you through the divorce process, ensuring your rights are protected and helping you move forward with confidence.",
+      "custody": "Child Custody and Support: We prioritize the well-being of your children and work tirelessly to secure fair custody arrangements and child support agreements that serve their best interests.",
+      "adoption": "Adoption: Welcoming a new member into your family through adoption is a joyous occasion. We provide comprehensive legal assistance to navigate the complexities of adoption law, helping you build the family you've always dreamed of.",
+      "prenuptial": "Prenuptial and Postnuptial Agreements: Planning for the future is essential. Our attorneys can assist you in drafting prenuptial and postnuptial agreements that protect your assets and provide clarity in the event of a divorce.",
+      "violence": "Domestic Violence: If you or a loved one is experiencing domestic violence, we're here to help you take legal action to ensure your safety and well-being."
+    },
+    "whyChooseUs": {
+      "title": "Why Choose Us",
+      "experience": "Experience: With years of experience in family law, our attorneys have the knowledge and expertise to handle even the most complex cases.",
+      "compassion": "Compassion: We understand the emotional toll that family legal matters can take. You can trust us to provide compassionate support every step of the way.",
+      "personalizedAttention": "Personalized Attention: Your case is unique, and we treat it as such. We take the time to understand your individual needs and tailor our approach accordingly."
+    },
+    "contact": {
+      "title": "Contact Us",
+      "description": "If you're in need of family law assistance, don't hesitate to reach out to us. Schedule a consultation today to discuss your case and learn how we can help you navigate the legal process with confidence."
+    }
+  },
+  "skipLinks": {
+    "familyLaw": "Skip to Family Law Section"
+  },
+  "calendly": {
+    "scheduleConsultation": "Schedule a Consultation"
+  },
+  "about": {
+    "about": "About",
+    "welcome": "Welcome to Conrad Szewczyk & Associates. At Conrad Szewczyk & Associates, we pride ourselves on our unwavering dedication to justice and our commitment to excellence in the legal profession. Founded in 1995 by Conrad Szewczyk, a renowned legal expert with over 30 years of experience, our firm has grown to encompass a diverse team of attorneys specializing in various legal fields, including corporate law, intellectual property, family law, criminal defense, and civil litigation.",
+    "mission": "Our mission is to provide comprehensive legal solutions that meet our clients' needs in an ever-evolving legal landscape. We believe in a client-first approach, ensuring personalized attention, transparency, and unwavering support throughout the legal process. Our team leverages the latest in legal technology, innovative strategies, and a deep understanding of the law to achieve the best possible outcomes for our clients.",
+    "moreThan": "Conrad Szewczyk & Associates is more than just a law firm; we are a trusted partner in navigating the complexities of the legal system. Whether you're facing a challenging legal battle or seeking advice on legal matters, our team is here to guide you every step of the way.",
+    "discover": "Discover the difference dedication, expertise, and a client-focused approach can make in your legal journey."
+  },
+  "contact": {
+    "contact": "Contact",
+    "Tel": "Tel",
+    "Fax": "Fax",
+    "Email": "Email",
+    "altText": "The Law Firm of CONRAD SZEWCZYK & ASSOCIATES"
+  },
+  "footer": {
+    "home": "Home",
+    "tel": "Tel",
+    "fax": "Fax",
+    "email": "Email",
+    "copyRight": "2024",
+    "allRightsReserved": "All rights reserved.",
+    "altText": "The Law Firm of CONRAD SZEWCZYK & ASSOCIATES logo"
   }
 }
